Assignment_5/c_lang.output
State 89 conflicts: 1 shift/reduce
State 90 conflicts: 1 shift/reduce
State 123 conflicts: 3 shift/reduce
State 124 conflicts: 3 shift/reduce


Grammar

    0 $accept: START $end

    1 START: function_declaration
    2      | variable_declaration_statement
    3      | START function_declaration
    4      | START variable_declaration_statement

    5 function_declaration: function_head '{' function_result_assignment statement_list '}'
    6                     | function_head '{' '}'

    7 function_result_assignment: %empty

    8 $@1: %empty

    9 function_head: TYPE IDENTIFIER '(' $@1 param_list_declaration ')'

   10 $@2: %empty

   11 function_head: VOID IDENTIFIER '(' $@2 param_list_declaration ')'
   12              | TYPE IDENTIFIER '(' ')'
   13              | VOID IDENTIFIER '(' ')'

   14 param_list_declaration: param_list_declaration ',' param_declaration
   15                       | param_declaration

   16 param_declaration: TYPE IDENTIFIER

   17 function_call: IDENTIFIER '(' ')'
   18              | IDENTIFIER '(' arg_list ')'

   19 arg_list: arithmetic_expression
   20         | arg_list ',' arithmetic_expression

   21 statement: conditional_statement
   22          | loop_statement
   23          | compound_statement
   24          | expression_statement
   25          | variable_declaration_statement
   26          | RETURN expression_statement
   27          | labeled_statement

   28 conditional_statement: if_exp statement
   29                      | if_exp statement else_mark statement

   30 $@3: %empty

   31 conditional_statement: SWITCH '(' expression ')' $@3 statement

   32 if_exp: IF '(' expression_cover ')'

   33 else_mark: ELSE

   34 $@4: %empty

   35 loop_statement: WHILE '(' expression_cover ')' $@4 statement
   36               | FOR_WITH_BR expression_statement expression_statement ')' statement
   37               | FOR_WITH_BR expression_statement expression_statement expression ')' statement

   38 FOR_WITH_BR: FOR '('

   39 $@5: %empty

   40 labeled_statement: CASE NUM ':' $@5 statement
   41                  | DEFAULT ':' statement

   42 compound_statement: '{' '}'

   43 $@6: %empty

   44 compound_statement: '{' $@6 statement_list '}'

   45 statement_list: statement
   46               | statement_list statement

   47 expression_statement: ';'
   48                     | expression ';'

   49 expression_cover: expression
   50                 | '(' expression_cover ')'

   51 expression: assignment_expression
   52           | logical_expression
   53           | relational_expression
   54           | arithmetic_expression

   55 assignment_expression: IDENTIFIER '=' arithmetic_expression

   56 logical_expression: expression_cover logical_operation expression_cover

   57 logical_operation: OR
   58                  | AND

   59 relational_expression: expression_cover REL_OP expression_cover

   60 arithmetic_expression: arithmetic_term '+' arithmetic_expression
   61                      | arithmetic_term '-' arithmetic_expression
   62                      | arithmetic_term

   63 arithmetic_term: arithmetic_factor '*' arithmetic_term
   64                | arithmetic_factor '/' arithmetic_term
   65                | arithmetic_factor

   66 arithmetic_factor: '(' arithmetic_expression ')'
   67                  | IDENTIFIER
   68                  | NUM
   69                  | function_call

   70 variable_declaration_statement: TYPE name_list ';'

   71 name_list: id_arr
   72          | id_arr ',' name_list

   73 id_arr: IDENTIFIER
   74       | IDENTIFIER '=' arithmetic_expression
   75       | IDENTIFIER bracket_dimlist

   76 bracket_dimlist: '[' NUM ']'
   77                | '[' NUM ']' bracket_dimlist


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 11 12 13 17 18 31 32 35 38 50 66
')' (41) 9 11 12 13 17 18 31 32 35 36 37 50 66
'*' (42) 63
'+' (43) 60
',' (44) 14 20 72
'-' (45) 61
'/' (47) 64
':' (58) 40 41
';' (59) 47 48 70
'=' (61) 55 74
'[' (91) 76 77
']' (93) 76 77
'{' (123) 5 6 42 44
'}' (125) 5 6 42 44
error (256)
NUM (258) 40 68 76 77
IDENTIFIER (259) 9 11 12 13 16 17 18 55 67 73 74 75
TYPE (260) 9 12 16 70
VOID (261) 11 13
OR (262) 57
AND (263) 58
REL_OP (264) 59
IF (265) 32
ELSE (266) 33
FOR (267) 38
WHILE (268) 35
SWITCH (269) 31
CASE (270) 40
DEFAULT (271) 41
RETURN (272) 26


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
START (33)
    on left: 1 2 3 4, on right: 0 3 4
function_declaration (34)
    on left: 5 6, on right: 1 3
function_result_assignment (35)
    on left: 7, on right: 5
function_head (36)
    on left: 9 11 12 13, on right: 5 6
$@1 (37)
    on left: 8, on right: 9
$@2 (38)
    on left: 10, on right: 11
param_list_declaration (39)
    on left: 14 15, on right: 9 11 14
param_declaration (40)
    on left: 16, on right: 14 15
function_call (41)
    on left: 17 18, on right: 69
arg_list (42)
    on left: 19 20, on right: 18 20
statement (43)
    on left: 21 22 23 24 25 26 27, on right: 28 29 31 35 36 37 40 41
    45 46
conditional_statement (44)
    on left: 28 29 31, on right: 21
$@3 (45)
    on left: 30, on right: 31
if_exp (46)
    on left: 32, on right: 28 29
else_mark (47)
    on left: 33, on right: 29
loop_statement (48)
    on left: 35 36 37, on right: 22
$@4 (49)
    on left: 34, on right: 35
FOR_WITH_BR (50)
    on left: 38, on right: 36 37
labeled_statement (51)
    on left: 40 41, on right: 27
$@5 (52)
    on left: 39, on right: 40
compound_statement (53)
    on left: 42 44, on right: 23
$@6 (54)
    on left: 43, on right: 44
statement_list (55)
    on left: 45 46, on right: 5 44 46
expression_statement (56)
    on left: 47 48, on right: 24 26 36 37
expression_cover (57)
    on left: 49 50, on right: 32 35 50 56 59
expression (58)
    on left: 51 52 53 54, on right: 31 37 48 49
assignment_expression (59)
    on left: 55, on right: 51
logical_expression (60)
    on left: 56, on right: 52
logical_operation (61)
    on left: 57 58, on right: 56
relational_expression (62)
    on left: 59, on right: 53
arithmetic_expression (63)
    on left: 60 61 62, on right: 19 20 54 55 60 61 66 74
arithmetic_term (64)
    on left: 63 64 65, on right: 60 61 62 63 64
arithmetic_factor (65)
    on left: 66 67 68 69, on right: 63 64 65
variable_declaration_statement (66)
    on left: 70, on right: 2 4 25
name_list (67)
    on left: 71 72, on right: 70 72
id_arr (68)
    on left: 73 74 75, on right: 71 72
bracket_dimlist (69)
    on left: 76 77, on right: 75 77


State 0

    0 $accept: . START $end

    TYPE  shift, and go to state 1
    VOID  shift, and go to state 2

    START                           go to state 3
    function_declaration            go to state 4
    function_head                   go to state 5
    variable_declaration_statement  go to state 6


State 1

    9 function_head: TYPE . IDENTIFIER '(' $@1 param_list_declaration ')'
   12              | TYPE . IDENTIFIER '(' ')'
   70 variable_declaration_statement: TYPE . name_list ';'

    IDENTIFIER  shift, and go to state 7

    name_list  go to state 8
    id_arr     go to state 9


State 2

   11 function_head: VOID . IDENTIFIER '(' $@2 param_list_declaration ')'
   13              | VOID . IDENTIFIER '(' ')'

    IDENTIFIER  shift, and go to state 10


State 3

    0 $accept: START . $end
    3 START: START . function_declaration
    4      | START . variable_declaration_statement

    $end  shift, and go to state 11
    TYPE  shift, and go to state 1
    VOID  shift, and go to state 2

    function_declaration            go to state 12
    function_head                   go to state 5
    variable_declaration_statement  go to state 13


State 4

    1 START: function_declaration .

    $default  reduce using rule 1 (START)


State 5

    5 function_declaration: function_head . '{' function_result_assignment statement_list '}'
    6                     | function_head . '{' '}'

    '{'  shift, and go to state 14


State 6

    2 START: variable_declaration_statement .

    $default  reduce using rule 2 (START)


State 7

    9 function_head: TYPE IDENTIFIER . '(' $@1 param_list_declaration ')'
   12              | TYPE IDENTIFIER . '(' ')'
   73 id_arr: IDENTIFIER .
   74       | IDENTIFIER . '=' arithmetic_expression
   75       | IDENTIFIER . bracket_dimlist

    '('  shift, and go to state 15
    '='  shift, and go to state 16
    '['  shift, and go to state 17

    $default  reduce using rule 73 (id_arr)

    bracket_dimlist  go to state 18


State 8

   70 variable_declaration_statement: TYPE name_list . ';'

    ';'  shift, and go to state 19


State 9

   71 name_list: id_arr .
   72          | id_arr . ',' name_list

    ','  shift, and go to state 20

    $default  reduce using rule 71 (name_list)


State 10

   11 function_head: VOID IDENTIFIER . '(' $@2 param_list_declaration ')'
   13              | VOID IDENTIFIER . '(' ')'

    '('  shift, and go to state 21


State 11

    0 $accept: START $end .

    $default  accept


State 12

    3 START: START function_declaration .

    $default  reduce using rule 3 (START)


State 13

    4 START: START variable_declaration_statement .

    $default  reduce using rule 4 (START)


State 14

    5 function_declaration: function_head '{' . function_result_assignment statement_list '}'
    6                     | function_head '{' . '}'

    '}'  shift, and go to state 22

    $default  reduce using rule 7 (function_result_assignment)

    function_result_assignment  go to state 23


State 15

    9 function_head: TYPE IDENTIFIER '(' . $@1 param_list_declaration ')'
   12              | TYPE IDENTIFIER '(' . ')'

    ')'  shift, and go to state 24

    $default  reduce using rule 8 ($@1)

    $@1  go to state 25


State 16

   74 id_arr: IDENTIFIER '=' . arithmetic_expression

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 28

    function_call          go to state 29
    arithmetic_expression  go to state 30
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 17

   76 bracket_dimlist: '[' . NUM ']'
   77                | '[' . NUM ']' bracket_dimlist

    NUM  shift, and go to state 33


State 18

   75 id_arr: IDENTIFIER bracket_dimlist .

    $default  reduce using rule 75 (id_arr)


State 19

   70 variable_declaration_statement: TYPE name_list ';' .

    $default  reduce using rule 70 (variable_declaration_statement)


State 20

   72 name_list: id_arr ',' . name_list

    IDENTIFIER  shift, and go to state 34

    name_list  go to state 35
    id_arr     go to state 9


State 21

   11 function_head: VOID IDENTIFIER '(' . $@2 param_list_declaration ')'
   13              | VOID IDENTIFIER '(' . ')'

    ')'  shift, and go to state 36

    $default  reduce using rule 10 ($@2)

    $@2  go to state 37


State 22

    6 function_declaration: function_head '{' '}' .

    $default  reduce using rule 6 (function_declaration)


State 23

    5 function_declaration: function_head '{' function_result_assignment . statement_list '}'

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    TYPE        shift, and go to state 39
    IF          shift, and go to state 40
    FOR         shift, and go to state 41
    WHILE       shift, and go to state 42
    SWITCH      shift, and go to state 43
    CASE        shift, and go to state 44
    DEFAULT     shift, and go to state 45
    RETURN      shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48
    ';'         shift, and go to state 49

    function_call                   go to state 29
    statement                       go to state 50
    conditional_statement           go to state 51
    if_exp                          go to state 52
    loop_statement                  go to state 53
    FOR_WITH_BR                     go to state 54
    labeled_statement               go to state 55
    compound_statement              go to state 56
    statement_list                  go to state 57
    expression_statement            go to state 58
    expression_cover                go to state 59
    expression                      go to state 60
    assignment_expression           go to state 61
    logical_expression              go to state 62
    relational_expression           go to state 63
    arithmetic_expression           go to state 64
    arithmetic_term                 go to state 31
    arithmetic_factor               go to state 32
    variable_declaration_statement  go to state 65


State 24

   12 function_head: TYPE IDENTIFIER '(' ')' .

    $default  reduce using rule 12 (function_head)


State 25

    9 function_head: TYPE IDENTIFIER '(' $@1 . param_list_declaration ')'

    TYPE  shift, and go to state 66

    param_list_declaration  go to state 67
    param_declaration       go to state 68


State 26

   68 arithmetic_factor: NUM .

    $default  reduce using rule 68 (arithmetic_factor)


State 27

   17 function_call: IDENTIFIER . '(' ')'
   18              | IDENTIFIER . '(' arg_list ')'
   67 arithmetic_factor: IDENTIFIER .

    '('  shift, and go to state 69

    $default  reduce using rule 67 (arithmetic_factor)


State 28

   66 arithmetic_factor: '(' . arithmetic_expression ')'

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 28

    function_call          go to state 29
    arithmetic_expression  go to state 70
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 29

   69 arithmetic_factor: function_call .

    $default  reduce using rule 69 (arithmetic_factor)


State 30

   74 id_arr: IDENTIFIER '=' arithmetic_expression .

    $default  reduce using rule 74 (id_arr)


State 31

   60 arithmetic_expression: arithmetic_term . '+' arithmetic_expression
   61                      | arithmetic_term . '-' arithmetic_expression
   62                      | arithmetic_term .

    '+'  shift, and go to state 71
    '-'  shift, and go to state 72

    $default  reduce using rule 62 (arithmetic_expression)


State 32

   63 arithmetic_term: arithmetic_factor . '*' arithmetic_term
   64                | arithmetic_factor . '/' arithmetic_term
   65                | arithmetic_factor .

    '*'  shift, and go to state 73
    '/'  shift, and go to state 74

    $default  reduce using rule 65 (arithmetic_term)


State 33

   76 bracket_dimlist: '[' NUM . ']'
   77                | '[' NUM . ']' bracket_dimlist

    ']'  shift, and go to state 75


State 34

   73 id_arr: IDENTIFIER .
   74       | IDENTIFIER . '=' arithmetic_expression
   75       | IDENTIFIER . bracket_dimlist

    '='  shift, and go to state 16
    '['  shift, and go to state 17

    $default  reduce using rule 73 (id_arr)

    bracket_dimlist  go to state 18


State 35

   72 name_list: id_arr ',' name_list .

    $default  reduce using rule 72 (name_list)


State 36

   13 function_head: VOID IDENTIFIER '(' ')' .

    $default  reduce using rule 13 (function_head)


State 37

   11 function_head: VOID IDENTIFIER '(' $@2 . param_list_declaration ')'

    TYPE  shift, and go to state 66

    param_list_declaration  go to state 76
    param_declaration       go to state 68


State 38

   17 function_call: IDENTIFIER . '(' ')'
   18              | IDENTIFIER . '(' arg_list ')'
   55 assignment_expression: IDENTIFIER . '=' arithmetic_expression
   67 arithmetic_factor: IDENTIFIER .

    '('  shift, and go to state 69
    '='  shift, and go to state 77

    $default  reduce using rule 67 (arithmetic_factor)


State 39

   70 variable_declaration_statement: TYPE . name_list ';'

    IDENTIFIER  shift, and go to state 34

    name_list  go to state 8
    id_arr     go to state 9


State 40

   32 if_exp: IF . '(' expression_cover ')'

    '('  shift, and go to state 78


State 41

   38 FOR_WITH_BR: FOR . '('

    '('  shift, and go to state 79


State 42

   35 loop_statement: WHILE . '(' expression_cover ')' $@4 statement

    '('  shift, and go to state 80


State 43

   31 conditional_statement: SWITCH . '(' expression ')' $@3 statement

    '('  shift, and go to state 81


State 44

   40 labeled_statement: CASE . NUM ':' $@5 statement

    NUM  shift, and go to state 82


State 45

   41 labeled_statement: DEFAULT . ':' statement

    ':'  shift, and go to state 83


State 46

   26 statement: RETURN . expression_statement

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    '('         shift, and go to state 48
    ';'         shift, and go to state 49

    function_call          go to state 29
    expression_statement   go to state 84
    expression_cover       go to state 59
    expression             go to state 60
    assignment_expression  go to state 61
    logical_expression     go to state 62
    relational_expression  go to state 63
    arithmetic_expression  go to state 64
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 47

   42 compound_statement: '{' . '}'
   44                   | '{' . $@6 statement_list '}'

    '}'  shift, and go to state 85

    $default  reduce using rule 43 ($@6)

    $@6  go to state 86


State 48

   50 expression_cover: '(' . expression_cover ')'
   66 arithmetic_factor: '(' . arithmetic_expression ')'

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    '('         shift, and go to state 48

    function_call          go to state 29
    expression_cover       go to state 87
    expression             go to state 88
    assignment_expression  go to state 61
    logical_expression     go to state 62
    relational_expression  go to state 63
    arithmetic_expression  go to state 89
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 49

   47 expression_statement: ';' .

    $default  reduce using rule 47 (expression_statement)


State 50

   45 statement_list: statement .

    $default  reduce using rule 45 (statement_list)


State 51

   21 statement: conditional_statement .

    $default  reduce using rule 21 (statement)


State 52

   28 conditional_statement: if_exp . statement
   29                      | if_exp . statement else_mark statement

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    TYPE        shift, and go to state 39
    IF          shift, and go to state 40
    FOR         shift, and go to state 41
    WHILE       shift, and go to state 42
    SWITCH      shift, and go to state 43
    CASE        shift, and go to state 44
    DEFAULT     shift, and go to state 45
    RETURN      shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48
    ';'         shift, and go to state 49

    function_call                   go to state 29
    statement                       go to state 90
    conditional_statement           go to state 51
    if_exp                          go to state 52
    loop_statement                  go to state 53
    FOR_WITH_BR                     go to state 54
    labeled_statement               go to state 55
    compound_statement              go to state 56
    expression_statement            go to state 58
    expression_cover                go to state 59
    expression                      go to state 60
    assignment_expression           go to state 61
    logical_expression              go to state 62
    relational_expression           go to state 63
    arithmetic_expression           go to state 64
    arithmetic_term                 go to state 31
    arithmetic_factor               go to state 32
    variable_declaration_statement  go to state 65


State 53

   22 statement: loop_statement .

    $default  reduce using rule 22 (statement)


State 54

   36 loop_statement: FOR_WITH_BR . expression_statement expression_statement ')' statement
   37               | FOR_WITH_BR . expression_statement expression_statement expression ')' statement

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    '('         shift, and go to state 48
    ';'         shift, and go to state 49

    function_call          go to state 29
    expression_statement   go to state 91
    expression_cover       go to state 59
    expression             go to state 60
    assignment_expression  go to state 61
    logical_expression     go to state 62
    relational_expression  go to state 63
    arithmetic_expression  go to state 64
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 55

   27 statement: labeled_statement .

    $default  reduce using rule 27 (statement)


State 56

   23 statement: compound_statement .

    $default  reduce using rule 23 (statement)


State 57

    5 function_declaration: function_head '{' function_result_assignment statement_list . '}'
   46 statement_list: statement_list . statement

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    TYPE        shift, and go to state 39
    IF          shift, and go to state 40
    FOR         shift, and go to state 41
    WHILE       shift, and go to state 42
    SWITCH      shift, and go to state 43
    CASE        shift, and go to state 44
    DEFAULT     shift, and go to state 45
    RETURN      shift, and go to state 46
    '{'         shift, and go to state 47
    '}'         shift, and go to state 92
    '('         shift, and go to state 48
    ';'         shift, and go to state 49

    function_call                   go to state 29
    statement                       go to state 93
    conditional_statement           go to state 51
    if_exp                          go to state 52
    loop_statement                  go to state 53
    FOR_WITH_BR                     go to state 54
    labeled_statement               go to state 55
    compound_statement              go to state 56
    expression_statement            go to state 58
    expression_cover                go to state 59
    expression                      go to state 60
    assignment_expression           go to state 61
    logical_expression              go to state 62
    relational_expression           go to state 63
    arithmetic_expression           go to state 64
    arithmetic_term                 go to state 31
    arithmetic_factor               go to state 32
    variable_declaration_statement  go to state 65


State 58

   24 statement: expression_statement .

    $default  reduce using rule 24 (statement)


State 59

   56 logical_expression: expression_cover . logical_operation expression_cover
   59 relational_expression: expression_cover . REL_OP expression_cover

    OR      shift, and go to state 94
    AND     shift, and go to state 95
    REL_OP  shift, and go to state 96

    logical_operation  go to state 97


State 60

   48 expression_statement: expression . ';'
   49 expression_cover: expression .

    ';'  shift, and go to state 98

    $default  reduce using rule 49 (expression_cover)


State 61

   51 expression: assignment_expression .

    $default  reduce using rule 51 (expression)


State 62

   52 expression: logical_expression .

    $default  reduce using rule 52 (expression)


State 63

   53 expression: relational_expression .

    $default  reduce using rule 53 (expression)


State 64

   54 expression: arithmetic_expression .

    $default  reduce using rule 54 (expression)


State 65

   25 statement: variable_declaration_statement .

    $default  reduce using rule 25 (statement)


State 66

   16 param_declaration: TYPE . IDENTIFIER

    IDENTIFIER  shift, and go to state 99


State 67

    9 function_head: TYPE IDENTIFIER '(' $@1 param_list_declaration . ')'
   14 param_list_declaration: param_list_declaration . ',' param_declaration

    ')'  shift, and go to state 100
    ','  shift, and go to state 101


State 68

   15 param_list_declaration: param_declaration .

    $default  reduce using rule 15 (param_list_declaration)


State 69

   17 function_call: IDENTIFIER '(' . ')'
   18              | IDENTIFIER '(' . arg_list ')'

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 28
    ')'         shift, and go to state 102

    function_call          go to state 29
    arg_list               go to state 103
    arithmetic_expression  go to state 104
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 70

   66 arithmetic_factor: '(' arithmetic_expression . ')'

    ')'  shift, and go to state 105


State 71

   60 arithmetic_expression: arithmetic_term '+' . arithmetic_expression

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 28

    function_call          go to state 29
    arithmetic_expression  go to state 106
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 72

   61 arithmetic_expression: arithmetic_term '-' . arithmetic_expression

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 28

    function_call          go to state 29
    arithmetic_expression  go to state 107
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 73

   63 arithmetic_term: arithmetic_factor '*' . arithmetic_term

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 28

    function_call      go to state 29
    arithmetic_term    go to state 108
    arithmetic_factor  go to state 32


State 74

   64 arithmetic_term: arithmetic_factor '/' . arithmetic_term

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 28

    function_call      go to state 29
    arithmetic_term    go to state 109
    arithmetic_factor  go to state 32


State 75

   76 bracket_dimlist: '[' NUM ']' .
   77                | '[' NUM ']' . bracket_dimlist

    '['  shift, and go to state 17

    $default  reduce using rule 76 (bracket_dimlist)

    bracket_dimlist  go to state 110


State 76

   11 function_head: VOID IDENTIFIER '(' $@2 param_list_declaration . ')'
   14 param_list_declaration: param_list_declaration . ',' param_declaration

    ')'  shift, and go to state 111
    ','  shift, and go to state 101


State 77

   55 assignment_expression: IDENTIFIER '=' . arithmetic_expression

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 27
    '('         shift, and go to state 28

    function_call          go to state 29
    arithmetic_expression  go to state 112
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 78

   32 if_exp: IF '(' . expression_cover ')'

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    '('         shift, and go to state 48

    function_call          go to state 29
    expression_cover       go to state 113
    expression             go to state 88
    assignment_expression  go to state 61
    logical_expression     go to state 62
    relational_expression  go to state 63
    arithmetic_expression  go to state 64
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 79

   38 FOR_WITH_BR: FOR '(' .

    $default  reduce using rule 38 (FOR_WITH_BR)


State 80

   35 loop_statement: WHILE '(' . expression_cover ')' $@4 statement

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    '('         shift, and go to state 48

    function_call          go to state 29
    expression_cover       go to state 114
    expression             go to state 88
    assignment_expression  go to state 61
    logical_expression     go to state 62
    relational_expression  go to state 63
    arithmetic_expression  go to state 64
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 81

   31 conditional_statement: SWITCH '(' . expression ')' $@3 statement

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    '('         shift, and go to state 48

    function_call          go to state 29
    expression_cover       go to state 59
    expression             go to state 115
    assignment_expression  go to state 61
    logical_expression     go to state 62
    relational_expression  go to state 63
    arithmetic_expression  go to state 64
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 82

   40 labeled_statement: CASE NUM . ':' $@5 statement

    ':'  shift, and go to state 116


State 83

   41 labeled_statement: DEFAULT ':' . statement

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    TYPE        shift, and go to state 39
    IF          shift, and go to state 40
    FOR         shift, and go to state 41
    WHILE       shift, and go to state 42
    SWITCH      shift, and go to state 43
    CASE        shift, and go to state 44
    DEFAULT     shift, and go to state 45
    RETURN      shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48
    ';'         shift, and go to state 49

    function_call                   go to state 29
    statement                       go to state 117
    conditional_statement           go to state 51
    if_exp                          go to state 52
    loop_statement                  go to state 53
    FOR_WITH_BR                     go to state 54
    labeled_statement               go to state 55
    compound_statement              go to state 56
    expression_statement            go to state 58
    expression_cover                go to state 59
    expression                      go to state 60
    assignment_expression           go to state 61
    logical_expression              go to state 62
    relational_expression           go to state 63
    arithmetic_expression           go to state 64
    arithmetic_term                 go to state 31
    arithmetic_factor               go to state 32
    variable_declaration_statement  go to state 65


State 84

   26 statement: RETURN expression_statement .

    $default  reduce using rule 26 (statement)


State 85

   42 compound_statement: '{' '}' .

    $default  reduce using rule 42 (compound_statement)


State 86

   44 compound_statement: '{' $@6 . statement_list '}'

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    TYPE        shift, and go to state 39
    IF          shift, and go to state 40
    FOR         shift, and go to state 41
    WHILE       shift, and go to state 42
    SWITCH      shift, and go to state 43
    CASE        shift, and go to state 44
    DEFAULT     shift, and go to state 45
    RETURN      shift, and go to state 46
    '{'         shift, and go to state 47
    '('         shift, and go to state 48
    ';'         shift, and go to state 49

    function_call                   go to state 29
    statement                       go to state 50
    conditional_statement           go to state 51
    if_exp                          go to state 52
    loop_statement                  go to state 53
    FOR_WITH_BR                     go to state 54
    labeled_statement               go to state 55
    compound_statement              go to state 56
    statement_list                  go to state 118
    expression_statement            go to state 58
    expression_cover                go to state 59
    expression                      go to state 60
    assignment_expression           go to state 61
    logical_expression              go to state 62
    relational_expression           go to state 63
    arithmetic_expression           go to state 64
    arithmetic_term                 go to state 31
    arithmetic_factor               go to state 32
    variable_declaration_statement  go to state 65


State 87

   50 expression_cover: '(' expression_cover . ')'
   56 logical_expression: expression_cover . logical_operation expression_cover
   59 relational_expression: expression_cover . REL_OP expression_cover

    OR      shift, and go to state 94
    AND     shift, and go to state 95
    REL_OP  shift, and go to state 96
    ')'     shift, and go to state 119

    logical_operation  go to state 97


State 88

   49 expression_cover: expression .

    $default  reduce using rule 49 (expression_cover)


State 89

   54 expression: arithmetic_expression .
   66 arithmetic_factor: '(' arithmetic_expression . ')'

    ')'  shift, and go to state 105

    ')'       [reduce using rule 54 (expression)]
    $default  reduce using rule 54 (expression)


State 90

   28 conditional_statement: if_exp statement .
   29                      | if_exp statement . else_mark statement

    ELSE  shift, and go to state 120

    ELSE      [reduce using rule 28 (conditional_statement)]
    $default  reduce using rule 28 (conditional_statement)

    else_mark  go to state 121


State 91

   36 loop_statement: FOR_WITH_BR expression_statement . expression_statement ')' statement
   37               | FOR_WITH_BR expression_statement . expression_statement expression ')' statement

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    '('         shift, and go to state 48
    ';'         shift, and go to state 49

    function_call          go to state 29
    expression_statement   go to state 122
    expression_cover       go to state 59
    expression             go to state 60
    assignment_expression  go to state 61
    logical_expression     go to state 62
    relational_expression  go to state 63
    arithmetic_expression  go to state 64
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 92

    5 function_declaration: function_head '{' function_result_assignment statement_list '}' .

    $default  reduce using rule 5 (function_declaration)


State 93

   46 statement_list: statement_list statement .

    $default  reduce using rule 46 (statement_list)


State 94

   57 logical_operation: OR .

    $default  reduce using rule 57 (logical_operation)


State 95

   58 logical_operation: AND .

    $default  reduce using rule 58 (logical_operation)


State 96

   59 relational_expression: expression_cover REL_OP . expression_cover

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    '('         shift, and go to state 48

    function_call          go to state 29
    expression_cover       go to state 123
    expression             go to state 88
    assignment_expression  go to state 61
    logical_expression     go to state 62
    relational_expression  go to state 63
    arithmetic_expression  go to state 64
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 97

   56 logical_expression: expression_cover logical_operation . expression_cover

    NUM         shift, and go to state 26
    IDENTIFIER  shift, and go to state 38
    '('         shift, and go to state 48

    function_call          go to state 29
    expression_cover       go to state 124
    expression             go to state 88
    assignment_expression  go to state 61
    logical_expression     go to state 62
    relational_expression  go to state 63
    arithmetic_expression  go to state 64
    arithmetic_term        go to state 31
    arithmetic_factor      go to state 32


State 98

   48 expression_statement: expression ';' .

    $default  reduce using rule 48 (expression_statement)


State 99

   16 param_declaration: TYPE IDENTIFIER .

    $default  reduce using rule 16 (param_declaration)


State 100

    9 function_head: TYPE IDENTIFIER '(' $@1 param_list_declaration ')' .

    $default  reduce using rule 9 (function_head)


State 101

   14 param_list_declaration: param_list_declaration ',' . param_declaration

    TYPE  shift, and go to state 66

    param_declaration  go to state 125


State 102

   17 function_call: IDENTIFIER '(' ')' .

    $default  reduce using rule 17 (function_call)


State 103

   18 function_call: IDENTIFIER '(' arg_list . ')'
   20 arg_list: arg_list . ',' arithmetic_expression

    ')'  shift, and go to state 126
    ','  shift, and go to state 127


State 104

   19 arg_list: arithmetic_expression .

    $default  reduce using rule 19 (arg_list)


State 105

   66 arithmetic_factor: '(' arithmetic_expression ')' .

    $default  reduce using rule 66 (arithmetic_factor)


State 106

   60 arithmetic_expression: arithmetic_term '+' arithmetic_expression .

    $default  reduce using rule 60 (arithmetic_expression)


State 107

   61 arithmetic_expression: arithmetic_term '-' arithmetic_expression .

    $default  reduce using rule 61 (arithmetic_expression)


State 108

   63 arithmetic_term: arithmetic_factor '*' arithmetic_term .

    $default  reduce using rule 63 (arithmetic_term)


State 109

   64 arithmetic_term: arithmetic_factor '/' arithmetic_term .

    $default  reduce using rule 64 (arithmetic_term)


State 110

   77 bracket_dimlist: '[' NUM ']' bracket_dimlist .

    $default  reduce using rule 77 (bracket_dimlist)


State 111

   11 function_head: VOID IDENTIFIER '(' $@2 param_list_declaration ')' .

    $default  reduce using rule 11 (function_head)


State 112

   55 assignment_expression: IDENTIFIER '=' arithmetic_expression .

    $default  reduce using rule 55 (assignment_expression)


State 113

   32 if_exp: IF '(' expression_cover . ')'
   56 logical_expression: expression_cover . logical_operation expression_cover
   59 relational_expression: expression_cover . REL_OP expression_cover

    OR      shift, and go to state 94
    AND     shift, and go to state 95
    REL_OP  shift, and go to state 96
    ')'     shift, and go to state 128

    logical_operation  go to state 97


State 114

   35 loop_statement: WHILE '(' expression_cover . ')' $@4 statement
   56 logical_expression: expression_cover . logical_operation expression_cover
   59 relational_expression: expression_cover . REL_OP expression_cover

    OR      shift, and go to state 94
    AND     shift, and go to state 95
    REL_OP  shift, and go to state 96
    ')'     shift, and go to state 129

    logical_operation  go to state 97


State 115

   31 conditional_statement: SWITCH '(' expression . ')' $@3 statement
   49 expression_cover: expression .

    ')'  shift, and go to state 130

    $default  reduce using rule 49 (expression_cover)


State 116

   40 labeled_statement: CASE NUM ':' . $@5 statement

    $default  reduce using rule 39 ($@5)

    $@5  go to state 131

